--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  photo_view: ^0.0.3
+  dson: ^0.13.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -12,6 +15,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  photo_view: ^0.0.3
+  dson: ^0.13.0
 
 
 # For information on the generic Dart part of this file, see the
