--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,8 @@ dependencies:
     sdk: flutter
 
   photo_view: ^0.0.3
-  dson: ^0.13.0
+  flutter_staggered_grid_view: ^0.2.2
+  shared_preferences: ^0.4.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -17,7 +18,8 @@ dev_dependencies:
     sdk: flutter
 
   photo_view: ^0.0.3
-  dson: ^0.13.0
+  flutter_staggered_grid_view: ^0.2.2
+  shared_preferences: ^0.4.2
 
 
 # For information on the generic Dart part of this file, see the
